Update StockDataFetcher.java